Fixed overflow issue with header

--- a/src/container/Footer/Footer.css
+++ b/src/container/Footer/Footer.css
@@ -60,7 +60,7 @@
 
 
 
-@media screen and (max-width: 450px) {
+@media screen and (max-width: 968px) {
     .footer__content {
         flex-direction: column;
     }
